[package]
name = "rust-play-chess"
version = "0.1.0"
authors = ["Hannes <hannes.furmans@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = "3.2.0"
smallvec = "1.6.1"
rayon = "1.5.0"
vampirc-uci = {version="0.11.0", features=["chess"]}

[profile.release]
lto = true